@@ -730,3 +730,12 @@ div#main_pure {
 .img_help {
 	cursor: help;
 }
+#loading {
+	position:fixed;
+	width: 200px;
+	margin-left: 250px;
+	text-align:center;
+	top:300px;
+	background-color: #999999;
+	padding: 20px;
+}
